<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@android:drawable/ic_media_play"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/login_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="487dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:orientation="vertical">


<!--        Titulo login -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:background="@color/teal_200"
            android:hint="@string/txt_nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="10sp"
            android:background="@color/teal_200"
            android:hint="@string/txt_senha"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/btnEntrar"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_entrar"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/btnEsqueceu"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/black"
            android:layout_width="284dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_recuperar"
            android:textSize="18sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</LinearLayout>